# beam

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  release-plz.toml  workflow_impl_plan.md
.github/: CODEOWNERS
.github/workflows/: parity.yml  publish.yml  release-plz.yml  release-pr.yml  release-tag.yml  release.yml
crates/beam-cli/: CHANGELOG.md  Cargo.toml
crates/beam-cli/assets/opencode/: beam-ask.js
crates/beam-cli/src/: ask_hook.rs  autostart.rs  global_config.rs  hook_setup.rs  main.rs  register_app.rs  workflow_cli.rs
crates/beam-core/: CHANGELOG.md  Cargo.toml
crates/beam-core/src/: api.rs  ask.rs  config.rs  i18n.rs  ipc.rs  lib.rs  paths.rs  permissions.rs  persist.rs  schedule_parser.rs  schedule_store.rs  session.rs  workflow.rs  workflow_actions.rs  workflow_binding.rs  workflow_cold_scan.rs  workflow_definition.rs  workflow_orchestrator.rs  workflow_output.rs  workflow_projection.rs  workflow_resume.rs  workflow_run.rs  workflow_runtime.rs  workflow_sidecar.rs  workflow_snapshot.rs
crates/beam-core/tests/: workflow_event_log.rs  workflow_regression.rs  workflow_resume.rs
crates/beam-daemon/: CHANGELOG.md  Cargo.toml
crates/beam-daemon/src/: ask.rs  connector_store.rs  dir_select.rs  grant.rs  lib.rs  main.rs  prompt.rs  terminal_auth.rs  terminal_proxy.rs  trigger_log.rs  webhook_key.rs  webhook_lifecycle.rs  workflow_cancellation.rs  workflow_catalog.rs  workflow_commands.rs  workflow_event_fanout.rs  workflow_execution.rs  workflow_host_executors.rs  workflow_progress_card.rs  workflow_reconcilers.rs  workflow_resume.rs  workflow_runtime_driver.rs  zellij_web.rs
crates/beam-worker/: CHANGELOG.md  Cargo.toml
crates/beam-worker/src/: adapter.rs  backend.rs  lib.rs  main.rs  terminal.rs
crates/beam-worker/src/adapters/: antigravity.rs  claude.rs  coco.rs  codex.rs  gemini.rs  generic.rs  hermes.rs  mod.rs  opencode.rs
docs/: TEST-GUIDE-ask-hooks.md  federation-design.en.md  federation-design.md  platform-design.en.md  platform-design.md  workflow.md  zellij-backend-poc.en.md  zellij-backend-poc.md
docs/design/: 2026-05-25-beam-ask-hooks-design.en.md  2026-05-25-beam-ask-hooks-design.md  2026-05-28-codex-type-ahead-steer-design.en.md  2026-05-28-codex-type-ahead-steer-design.md  beam-architecture.en.md  beam-architecture.md  beam-parity-backlog.en.md  beam-parity-backlog.md  beam-parity-plan.en.md  beam-parity-plan.md  beam.en.md  beam.md  terminal-proxy.en.md  terminal-proxy.md
docs/plans/: 2026-05-25-beam-ask-hooks.md
docs/specs/changes/archive/: 20260525-lark-post-richtext-complete.md
docs/superpowers/specs/: 2026-03-28-e2e-browser-test-design.md  2026-05-20-grant-permission-design.md  2026-05-22-allowed-chat-groups.md  2026-05-26-global-talk-grant-design.md  2026-05-26-grant-bot-design.md
scripts/: dogfood-o1.sh  install-workspace-bins.sh
scripts/git-hooks/: pre-push
workflows/: canary-multistep.workflow.json  code-review-loop.workflow.json  feishu-reply-demo.workflow.json  feishu-send-demo.workflow.json  hello.workflow.json  o1-canary.workflow.json  schedule-demo.workflow.json  subagent-approval-feishu-send.workflow.json
