[workspace]
members = [
  "crates/beam-cli",
  "crates/beam-core",
  "crates/beam-daemon",
  "crates/beam-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"
rust-version = "1.95"
repository = "https://github.com/linuxhenhao/beam"
homepage = "https://github.com/linuxhenhao/beam"
documentation = "https://github.com/linuxhenhao/beam"
readme = "README.en.md"
keywords = ["lark", "feishu", "cli", "agent", "automation"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
libc = "0.2.177"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
hmac = "0.12.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
base64 = "0.22.1"
futures-util = "0.3.31"
tower-http = { version = "0.6", features = ["fs"] }
ab_glyph = "0.2.29"
font8x8 = "0.3.1"
image = { version = "0.25.8", default-features = false, features = ["png"] }
unicode-width = "0.2.0"
aes-gcm = { version = "0.10.3", features = ["aes"] }
qrcode = { version = "0.14.1", default-features = false }
url = "2.5.7"
feishu-sdk = { version = "0.1.2", features = ["websocket"] }
rustls = "0.23.40"
