[package]
name = "beam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "beam"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
beam-core = { path = "../beam-core" }
beam-daemon = { path = "../beam-daemon" }
beam-worker = { path = "../beam-worker" }
clap.workspace = true
chrono.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
qrcode.workspace = true
url.workspace = true
