[package]
name = "beam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI entrypoint for beam, a Rust runtime that connects Feishu/Lark threads to local AI coding CLIs"

[[bin]]
name = "beam"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
beam-core = { path = "../beam-core", version = "0.2.4" }
beam-daemon = { path = "../beam-daemon", version = "0.2.4" }
beam-worker = { path = "../beam-worker", version = "0.2.4" }
clap.workspace = true
chrono.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
qrcode.workspace = true
url.workspace = true
