[package]
name = "beam-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Daemon process for beam that receives Feishu/Lark events and manages coding sessions"

[[bin]]
name = "beam-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
async-trait.workspace = true
beam-core = { path = "../beam-core", version = "0.4.0" }
clap.workspace = true
chrono.workspace = true
reqwest.workspace = true
base64.workspace = true
aes-gcm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
uuid.workspace = true
feishu-sdk.workspace = true
libc.workspace = true
rustls.workspace = true
shell-words.workspace = true
