[package]
name = "beam-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Per-session worker process for beam that owns terminal backends and CLI adapters"

[[bin]]
name = "beam-worker"
path = "src/main.rs"

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
beam-core = { path = "../beam-core", version = "0.1.0" }
chrono.workspace = true
clap.workspace = true
font8x8.workspace = true
image.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
uuid.workspace = true
